src/runtime/snapshots/ghat__runtime__tests__api_jobs_if_and_env.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/ci.ts ===
workflow("CI", {
    on: triggers({ push: ["main"] }),
    jobs(ctx) {
        const build = ctx.job("Build", {
            runs_on: "ubuntu-latest",
            steps(ctx) {
                return { version: "1.0" };
            },
        });

        ctx.job("Deploy", {
            runs_on: "ubuntu-latest",
            needs: [build],
            if: (ctx) => `\${{ needs.build.result == 'success' }}`,
            env: (ctx) => ({ VERSION: `${ctx.needs.build.outputs.version}` }),
            timeout_minutes: 30,
            steps(ctx) {},
        });
    },
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    outputs:
      version: '1.0'
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    needs:
    - build
    if: ${{ needs.build.result == 'success' }}
    env:
      VERSION: ${{ needs.build.outputs.version }}
    timeout-minutes: 30
