src/runtime/snapshots/ghat__runtime__tests__api_jobs_name_normalization.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/ci.ts ===
workflow("CI", {
    on: triggers({ push: ["main"] }),
    jobs(ctx) {
        const build = ctx.job("Build Artifacts", {
            runs_on: "ubuntu-latest",
            steps(ctx) {
                return { path: "/tmp/build" };
            },
        });

        ctx.job("Deploy To Production", {
            runs_on: "ubuntu-latest",
            needs: [build],
            steps(ctx) {
                const _path = ctx.needs.build_artifacts.outputs.path;
            },
        });
    },
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  build_artifacts:
    name: Build Artifacts
    runs-on: ubuntu-latest
    outputs:
      path: /tmp/build
  deploy_to_production:
    name: Deploy To Production
    runs-on: ubuntu-latest
    needs:
    - build_artifacts
