src/runtime/snapshots/ghat__runtime__tests__api_jobs_needs.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/ci.ts ===
workflow("CI", {
    on: triggers({ push: ["main"] }),
    jobs(ctx) {
        const build = ctx.job("Build", {
            runs_on: "ubuntu-latest",
            steps(ctx) {
                return { artifact_id: "some-id" };
            },
        });

        ctx.job("Deploy", {
            runs_on: "ubuntu-latest",
            needs: [build],
            steps(ctx) {
                const _art = ctx.needs.build.outputs.artifact_id;
            },
        });
    },
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    outputs:
      artifact_id: some-id
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    needs:
    - build
