src/runtime/snapshots/ghat__runtime__tests__api_jobs_strategy.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/ci.ts ===
workflow("CI", {
    on: triggers({ push: ["main"] }),
    jobs(ctx) {
        ctx.job("Test", {
            runs_on: (ctx) => `${ctx.matrix.os}`,
            strategy: { matrix: { os: ["ubuntu-latest", "windows-latest"], node: ["18", "20"] }, fail_fast: true, max_parallel: 2 },
            steps(ctx) {},
        });
    },
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ${{ matrix.os }}
    strategy:
      matrix:
        node:
        - '18'
        - '20'
        os:
        - ubuntu-latest
        - windows-latest
      fail-fast: true
      max-parallel: 2
