src/runtime/snapshots/ghat__runtime__tests__api_steps_run.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/ci.ts ===
workflow("CI", {
    on: triggers({ push: ["main"] }),
    jobs(ctx) {
        ctx.job("Test", {
            runs_on: "ubuntu-latest",
            steps(ctx) {
                run("echo hello");
                run("cargo test", {
                    name: "Run tests",
                    shell: "bash",
                    working_directory: "./crates",
                    env: { RUST_LOG: "debug" },
                    timeout_minutes: 30,
                    continue_on_error: true,
                    if: "always()",
                });
            },
        });
    },
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: __step_0
      run: echo hello
    - id: __step_1
      name: Run tests
      run: cargo test
      shell: bash
      working-directory: ./crates
      env:
        RUST_LOG: debug
      if: always()
      timeout-minutes: 30
      continue-on-error: true
