src/runtime/snapshots/ghat__runtime__tests__api_steps_uses.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/ci.ts ===
workflow("CI", {
    on: triggers({ push: ["main"] }),
    jobs(ctx) {
        ctx.job("Test", {
            runs_on: "ubuntu-latest",
            steps(ctx) {
                uses("actions/checkout", {
                    with: { fetch_depth: 0, submodules: "recursive" },
                });
                run("cargo test");
            },
        });
    },
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: __step_0
      uses: actions/checkout
      with:
        fetch_depth: 0
        submodules: recursive
    - id: __step_1
      run: cargo test
