src/runtime/snapshots/ghat__runtime__tests__api_workflow_basic.snap
---
source: src/runtime/tests.rs
expression: "snapshot_yaml(files, rt)"
---
=== /workflows/ci.ts ===
workflow("CI", {
    on: triggers({
        push: ["main"],
    }),
    jobs(ctx) {},
});
=== output ===
# ci
name: CI
on:
  push:
    branches:
    - main
