src/runtime/snapshots/ghat__runtime__tests__api_workflow_concurrency_rejects_needs.snap
---
source: src/runtime/tests.rs
expression: "snapshot_err(files, &err)"
---
=== /workflows/bad.ts ===
workflow("Bad", {
    on: triggers({ push: ["main"] }),
    concurrency: (ctx) => ({ group: `${ctx.needs.build}` }),
    jobs(ctx) {},
});
=== error ===

  x context 'needs' is not available in 'Bad > concurrency' (available:
  | github, inputs, vars)
   ,-[/workflows/bad.ts:4:1]
 3 |     on: triggers({ push: ["main"] }),
 4 |     concurrency: (ctx) => ({ group: `${ctx.needs.build}` }),
   : ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 5 |     jobs(ctx) {},
   `----
